Added decimal parsing and input restrictions

--- a/index.html
+++ b/index.html
@@ -11,8 +11,31 @@
 
 <body>
 
-    <input type="text" id="input1" />
-    <button>Submit</button>
+    <div class="example">
+        <h2>Example 1</h2>
+
+        <p>What is 3 + 9?</p>
+
+        <div>
+            <input type="text" id="input1" />
+            <button>Submit</button>
+        </div>
+    
+          <p class="validationMessage" id="validationMessage1"></p>
+    </div>
+
+    <div class="example">
+        <h2>Example 2</h2>
+
+        <p>What is 2.2 + 10.7?</p>
+
+        <div>
+            <input type="text" id="input2" />
+            <button>Submit</button>
+        </div>
+
+        <p class="validationMessage" id="validationMessage2"></p>
+    </div>
 
 </body>
 
