Added validation on submit and began adding comments

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="style.css" type="text/css" rel="stylesheet" />
 
     <script type="text/javascript" src="responseparsing.js"></script>
+    <script type="text/javascript" src="tests.js"></script>
 
 </head>
 
@@ -18,7 +19,7 @@
 
         <div>
             <input type="text" id="input1" />
-            <button>Submit</button>
+            <button id="submitButton1">Submit</button>
         </div>
     
           <p class="validationMessage" id="validationMessage1"></p>
@@ -31,7 +32,7 @@
 
         <div>
             <input type="text" id="input2" />
-            <button>Submit</button>
+            <button id="submitButton2">Submit</button>
         </div>
 
         <p class="validationMessage" id="validationMessage2"></p>
