Added the ability to parse fractions

--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
         <p class="validationMessage" id="validationMessage2"></p>
     </div>
 
+    <div class="example">
+        <h2>Example 3</h2>
+
+        <p>What is 1/3 + 4/3?</p>
+
+        <div>
+            <input type="text" id="input3" />
+            <button id="submitButton3">Submit</button>
+        </div>
+
+        <p class="validationMessage" id="validationMessage3"></p>
+    </div>
+
 </body>
 
 </html>
