--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
     <link href="style.css" type="text/css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="responseparsing.js"></script>
 
     <script type="text/javascript">
@@ -15,18 +18,21 @@
             var i1 = document.getElementById("input1");
             var o1 = document.getElementById("validationMessage1");
             var sb1 = document.getElementById("submitButton1");
+            var ko1 = document.getElementById("katexOutput1");
 
             var i2 = document.getElementById("input2");
             var o2 = document.getElementById("validationMessage2");
             var sb2 = document.getElementById("submitButton2");
+            var ko2 = document.getElementById("katexOutput2");
 
             var i3 = document.getElementById("input3");
             var o3 = document.getElementById("validationMessage3");
             var sb3 = document.getElementById("submitButton3");
+            var ko3 = document.getElementById("katexOutput3");
 
-            validator.addInput(i1, "integer", o1, sb1);
-            validator.addInput(i2, "decimalNumber", o2, sb2);
-            validator.addInput(i3, "fraction", o3, sb3);
+            validator.addInput(i1, "integer", ko1, o1, sb1);
+            validator.addInput(i2, "decimalNumber", ko2, o2, sb2);
+            validator.addInput(i3, "fraction", ko3, o3, sb3);
         });
 
     </script>
@@ -47,6 +53,8 @@
             <button id="submitButton1">Submit</button>
         </div>
 
+        <div class="katexOutput" id="katexOutput1"></div>
+
         <p class="validationMessage" id="validationMessage1"></p>
     </div>
 
@@ -60,6 +68,8 @@
             <button id="submitButton2">Submit</button>
         </div>
 
+        <div class="katexOutput" id="katexOutput2"></div>
+
         <p class="validationMessage" id="validationMessage2"></p>
     </div>
 
@@ -72,6 +82,8 @@
             <input type="text" id="input3" />
             <button id="submitButton3">Submit</button>
         </div>
+
+        <div class="katexOutput" id="katexOutput3"></div>
 
         <p class="validationMessage" id="validationMessage3"></p>
     </div>
