--- a/check.html
+++ b/check.html
@@ -5,6 +5,9 @@
 
     <link href="style.css" type="text/css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="responseparsing.js"></script>
 
     <script type="text/javascript">
@@ -15,9 +18,20 @@
 
             var input = document.getElementById("input1");
             var output = document.getElementById("output1");
+            var katexOutput = document.getElementById("katexOutput1");
 
             input.onkeyup = function (e) {
-                output.innerText = JSON.stringify(rp.getParseResult(input.value.toString()), null, 4);
+                var parseResult = rp.getParseResult(input.value.toString());
+
+                output.innerText = JSON.stringify(parseResult, null, 4);
+
+                if (parseResult !== null) {
+                    katex.render(parseResult.latex, katexOutput);
+                }
+                else {
+                    katex.render("", katexOutput);
+                }
+
             }
 
         });
@@ -32,6 +46,7 @@
 
     <div class="mainbox">
         <input type="text" id="input1" />
+        <div class="katexOutput" id="katexOutput1" style="text-align: center;"></div>
         <pre><code id="output1"></code></pre>
     </div>
 
