Added bracketed expressions

--- a/check.html
+++ b/check.html
@@ -24,7 +24,8 @@
             "radical": 280,
             "fraction": 15,
             "mixedFraction": 30,
-            "namedFunction": 200
+            "namedFunction": 200,
+            "bracketedExpression": 300,
         }
 
         class App extends Application {
