--- a/check.html
+++ b/check.html
@@ -26,6 +26,7 @@
             "mixedFraction": 30,
             "namedFunction": 200,
             "bracketedExpression": 300,
+            "factorial": 250,
         }
 
         class App extends Application {
