Various fixes and added simplifier

--- a/check.html
+++ b/check.html
@@ -19,14 +19,15 @@
 
         var nodeColours = {
             "number": 220,
-            "binomialOperation": 350,
+            "binaryOperation": 350,
             "identifier": 90,
             "radical": 280,
+            "surd": 290,
             "fraction": 15,
             "mixedFraction": 30,
             "namedFunction": 200,
             "bracketedExpression": 300,
-            "factorial": 250,
+            "unaryOperation": 250,
         }
 
         class App extends Application {
