--- a/check.html
+++ b/check.html
@@ -20,6 +20,7 @@
         var nodeColours = {
             "number": 220,
             "binaryOperation": 350,
+            "summation": 350,
             "identifier": 90,
             "radical": 280,
             "surd": 290,
