Added surds tests

--- a/check.html
+++ b/check.html
@@ -12,8 +12,7 @@
     <script type="text/javascript" src="http://www.physicsformulae.com/2dgraphicsjs/graphics.js"></script>
     <script type="text/javascript" src="http://www.physicsformulae.com/2dgraphicsjs/application.js"></script>
 
-    <script type="text/javascript" src="rpnodes.js"></script>
-    <script type="text/javascript" src="responseparsing.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
 
     <script type="text/javascript">
 
@@ -183,8 +182,6 @@
         });
 
     </script>
-
-    <script type="text/javascript" src="tests.js"></script>
 
 </head>
 
